# online-store

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: black_check.yml  linters_check.yml  main.yml
megano/: db_megano.sqlite3  diff_online_store_130625.txt  megano_data.json  some_file.py
megano/api_auth/: admin.py  models.py  serializers.py  urls.py  views.py
megano/api_auth/migrations/: 0001_initial.py  0002_alter_avatar_profile.py  0003_alter_profile_options.py
megano/api_order/: models.py  serializers.py  urls.py  views.py
megano/api_order/migrations/: 0001_initial.py
megano/api_product/: admin.py  apps.py  models.py  pagination.py  serializers.py  signals.py  urls.py  views.py
megano/api_product/management/commands/: create_products.py
megano/api_product/migrations/: 0001_initial.py  0002_rename_title_tag_name.py  0003_review_unique_product_user_review.py  0004_alter_categoryimage_category.py  0005_product_available.py  0006_product_datefrom_product_dateto_product_saleprice_and_more.py
megano/api_transaction/: models.py  serializers.py  urls.py  views.py
megano/api_transaction/migrations/: 0001_initial.py
megano/megano/: settings.py  urls.py
megano/swagger/: forms.py  urls.py  views.py
megano/swagger/templates/swagger/: swagger-ui.html  upload_swagger.html
