[tool.poetry]
name = "megano-online-store-2025"
version = "0.1.0"
authors = ["uservm <example@mail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=5.2.1,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
setuptools = ">=80.9.0,<81.0.0"
django-filter = ">=25.1,<26.0"
pillow = ">=11.2.1,<12.0.0"
drf-spectacular = ">=0.28.0,<0.29.0"
django-cleanup = ">=9.0.0,<10.0.0"
diploma-frontend = { path = "./diploma-frontend/arch/diploma-frontend-0.6.tar.gz" }

[tool.poetry.group.linters]
optional = true

[tool.poetry.group.linters.dependencies]
black = "24.10.0"
pre-commit = "4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
include = '''
/megano/
'''
exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
  | static
  | uploads
  | migrations
  | swagger
)/
'''
